Spacing fixes to the screenshot thumbnails.

--- a/stylesheets/stylesheets.css
+++ b/stylesheets/stylesheets.css
@@ -11,6 +11,7 @@ h3 {
 	text-shadow: 3px 3px 0px #111;
 	margin-top: 1.5em;
 	margin-bottom: 1.2em;
+	clear: both;
 }
 
 div#header {
@@ -61,11 +62,17 @@ ul.navigation {
 
 ul#screenshots {
 	margin-top: 0.5em;
+	margin-bottom: 2em;
+	padding-bottom: 2em; 
+	padding-left: 1.8em;
 }
 
 ul#screenshots li {
+	padding: 0 0 2em 0;
 	display: inline;
 	list-style-type: none;
+	float: left;
+	margin-right: 1em;
 }
 
 a {
